--- a/functions/pom.xml
+++ b/functions/pom.xml
@@ -72,6 +72,7 @@
 		<module>function/spel-function</module>
 		<module>function/payload-converter-function</module>
 		<module>function/splitter-function</module>
+		<module>function/tasklauncher-function</module>
 
 		<module>supplier/file-supplier</module>
 		<module>supplier/ftp-supplier</module>
