--- a/applications/source/jms-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/source/jms-source/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,3 +1,3 @@
 configuration-properties.classes=org.springframework.cloud.fn.supplier.jms.JmsSupplierProperties,\
   org.springframework.boot.autoconfigure.jms.JmsProperties,\
-  org.springframework.boot.autoconfigure.jms.JmsProperties$Listener,\
+  org.springframework.boot.autoconfigure.jms.JmsProperties$Listener
