--- a/applications/source/file-source/pom.xml
+++ b/applications/source/file-source/pom.xml
@@ -82,6 +82,30 @@
             <name>Spring Milestones</name>
             <url>https://repo.spring.io/libs-milestone-local</url>
         </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>spring-releases</id>
+            <name>Spring Releases</name>
+            <url>https://repo.spring.io/release</url>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>spring-libs-release</id>
+            <name>Spring Libs Release</name>
+            <url>https://repo.spring.io/libs-release</url>
+        </repository>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>spring-milestone-release</id>
+            <name>Spring Milestone Release</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+        </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
