--- a/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -27,9 +27,9 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.springframework.cloud.stream.app.plugin</groupId>
-					<artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
-					<version>2.0.0.BUILD-SNAPSHOT</version>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
+					<version>1.0.0-SNAPSHOT</version>
 					<executions>
 						<execution>
 							<id>app-gen</id>
@@ -158,9 +158,9 @@
 
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.cloud.stream.app.plugin</groupId>
-				<artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
-				<version>2.0.0.BUILD-SNAPSHOT</version>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
+				<version>1.0.0-SNAPSHOT</version>
 
 				<configuration>
 					<generatedProjectHome>./target/apps</generatedProjectHome>
