--- a/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/test/resources/unit/http-source-apps/pom.xml
@@ -40,137 +40,144 @@
 						</execution>
 					</executions>
 					<configuration>
-<!--						<generatedProjectHome>${basedir}/apps</generatedProjectHome>-->
-<!--												<javaVersion>1.8</javaVersion>-->
-						<bootVersion>${spring-boot.version}</bootVersion>
-
-						<binders>
-							<binder>
-								<name>kafka</name>
+						<global>
+							<application>
+								<bootVersion>${spring-boot.version}</bootVersion>
+								<metadata>
+									<mavenPluginVersion>2.0.2.BUILD-SNAPSHOT</mavenPluginVersion>
+								</metadata>
 								<maven>
-									<dependencies>
+									<dependencyManagement>
 										<dependency>
 											<groupId>org.springframework.cloud</groupId>
-											<artifactId>spring-cloud-stream-binder-kafka</artifactId>
+											<artifactId>spring-cloud-stream-dependencies</artifactId>
+											<version>${spring-cloud-stream-dependencies.version}</version>
 										</dependency>
-									</dependencies>
-								</maven>
-							</binder>
-							<binder>
-								<name>rabbit</name>
-								<maven>
-									<dependencies>
 										<dependency>
 											<groupId>org.springframework.cloud</groupId>
-											<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+											<artifactId>spring-cloud-function-dependencies</artifactId>
+											<version>${spring-cloud-function-dependencies.version}</version>
+										</dependency>
+										<dependency>
+											<groupId>org.springframework.cloud</groupId>
+											<artifactId>spring-cloud-dependencies</artifactId>
+											<version>${spring-cloud-dependencies.version}</version>
+										</dependency>
+									</dependencyManagement>
+									<dependencies>
+										<dependency>
+											<groupId>org.springframework.cloud.stream.app</groupId>
+											<artifactId>stream-apps-security-common</artifactId>
+											<version>${stream-apps-core.version}</version>
+										</dependency>
+										<dependency>
+											<groupId>org.springframework.cloud.stream.app</groupId>
+											<artifactId>stream-apps-micrometer-common</artifactId>
+											<version>${stream-apps-core.version}</version>
+										</dependency>
+										<dependency>
+											<groupId>io.micrometer</groupId>
+											<artifactId>micrometer-registry-influx</artifactId>
+										</dependency>
+										<dependency>
+											<groupId>io.micrometer</groupId>
+											<artifactId>micrometer-registry-prometheus</artifactId>
+										</dependency>
+										<dependency>
+											<groupId>io.micrometer</groupId>
+											<artifactId>micrometer-registry-datadog</artifactId>
+										</dependency>
+										<dependency>
+											<groupId>io.pivotal.cfenv</groupId>
+											<artifactId>java-cfenv-boot</artifactId>
+											<version>${java-cfenv-boot.version}</version>
+										</dependency>
+										<dependency>
+											<groupId>org.springframework.boot</groupId>
+											<artifactId>spring-boot-configuration-processor</artifactId>
+										</dependency>
+										<dependency>
+											<groupId>org.springframework.boot</groupId>
+											<artifactId>spring-boot-starter-actuator</artifactId>
+										</dependency>
+										<dependency>
+											<groupId>org.springframework.boot</groupId>
+											<artifactId>spring-boot-starter-web</artifactId>
+										</dependency>
+										<dependency>
+											<groupId>org.springframework.boot</groupId>
+											<artifactId>spring-boot-starter-logging</artifactId>
+										</dependency>
+										<dependency>
+											<groupId>org.springframework.boot</groupId>
+											<artifactId>spring-boot-starter-security</artifactId>
 										</dependency>
 									</dependencies>
+									<plugins>
+										<plugin>
+											<groupId>org.logaritex</groupId>
+											<artifactId>test-additional-maven-plugin</artifactId>
+											<version>3.0.0</version>
+											<configuration>
+												<![CDATA[
+													<from>
+														<image>springcloud/openjdk</image>
+													</from>
+													<to>
+														<image>springcloudstream:${project.artifactId}</image>
+														<tags>
+															<tag>latest</tag>
+														</tags>
+													</to>
+													<container>
+														<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+														<format>Docker</format>
+														<labels>
+															<org.springframework.cloud.dataflow.spring-configuration-metadata.json>${org.springframework.cloud.dataflow.spring.configuration.metadata.json}</org.springframework.cloud.dataflow.spring-configuration-metadata.json>
+														</labels>
+													</container>
+												]]>
+											</configuration>
+											<executions>
+												<execution>
+													<id>sign-artifacts</id>
+													<phase>verify</phase>
+													<goals>
+														<goal>sign</goal>
+													</goals>
+												</execution>
+											</executions>
+										</plugin>
+									</plugins>
 								</maven>
-							</binder>
-						</binders>
-						<boms>
-							<dependency>
-								<groupId>org.springframework.cloud</groupId>
-								<artifactId>spring-cloud-stream-dependencies</artifactId>
-								<version>${spring-cloud-stream-dependencies.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.cloud</groupId>
-								<artifactId>spring-cloud-function-dependencies</artifactId>
-								<version>${spring-cloud-function-dependencies.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.cloud</groupId>
-								<artifactId>spring-cloud-dependencies</artifactId>
-								<version>${spring-cloud-dependencies.version}</version>
-							</dependency>
-						</boms>
+							</application>
+							<binders>
+								<kafka>
+									<maven>
+										<dependencies>
+											<dependency>
+												<groupId>org.springframework.cloud</groupId>
+												<artifactId>spring-cloud-stream-binder-kafka</artifactId>
+											</dependency>
+										</dependencies>
+									</maven>
+								</kafka>
+								<rabbit>
+									<maven>
+										<dependencies>
+											<dependency>
+												<groupId>org.springframework.cloud</groupId>
+												<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+											</dependency>
+										</dependencies>
+									</maven>
+								</rabbit>
+							</binders>
 
-						<globalDependencies>
-							<dependency>
-								<groupId>org.springframework.cloud.stream.app</groupId>
-								<artifactId>stream-apps-security-common</artifactId>
-								<version>${stream-apps-core.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.cloud.stream.app</groupId>
-								<artifactId>stream-apps-micrometer-common</artifactId>
-								<version>${stream-apps-core.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>io.micrometer</groupId>
-								<artifactId>micrometer-registry-influx</artifactId>
-							</dependency>
-							<dependency>
-								<groupId>io.micrometer</groupId>
-								<artifactId>micrometer-registry-prometheus</artifactId>
-							</dependency>
-							<dependency>
-								<groupId>io.micrometer</groupId>
-								<artifactId>micrometer-registry-datadog</artifactId>
-							</dependency>
-							<dependency>
-								<groupId>io.pivotal.cfenv</groupId>
-								<artifactId>java-cfenv-boot</artifactId>
-								<version>${java-cfenv-boot.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.boot</groupId>
-								<artifactId>spring-boot-configuration-processor</artifactId>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.boot</groupId>
-								<artifactId>spring-boot-starter-actuator</artifactId>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.boot</groupId>
-								<artifactId>spring-boot-starter-web</artifactId>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.boot</groupId>
-								<artifactId>spring-boot-starter-logging</artifactId>
-							</dependency>
-							<dependency>
-								<groupId>org.springframework.boot</groupId>
-								<artifactId>spring-boot-starter-security</artifactId>
-							</dependency>
-						</globalDependencies>
-						<additionalPlugins>
-							<plugin>
-								<groupId>org.logaritex</groupId>
-								<artifactId>test-additional-maven-plugin</artifactId>
-								<version>3.0.0</version>
-								<configuration>
-									<![CDATA[
-										<from>
-											<image>springcloud/openjdk</image>
-										</from>
-										<to>
-											<image>springcloudstream:${project.artifactId}</image>
-											<tags>
-												<tag>latest</tag>
-											</tags>
-										</to>
-										<container>
-											<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
-											<format>Docker</format>
-											<labels>
-												<org.springframework.cloud.dataflow.spring-configuration-metadata.json>${org.springframework.cloud.dataflow.spring.configuration.metadata.json}</org.springframework.cloud.dataflow.spring-configuration-metadata.json>
-											</labels>
-										</container>
-									]]>
-								</configuration>
-								<executions>
-									<execution>
-										<id>sign-artifacts</id>
-										<phase>verify</phase>
-										<goals>
-											<goal>sign</goal>
-										</goals>
-									</execution>
-								</executions>
-							</plugin>
-						</additionalPlugins>
+						</global>
+						<!--						<generatedProjectHome>${basedir}/apps</generatedProjectHome>-->
+						<!--												<javaVersion>1.8</javaVersion>-->
+						<!--						<bootVersion>${spring-boot.version}</bootVersion>-->
 					</configuration>
 				</plugin>
 			</plugins>
@@ -184,42 +191,43 @@
 
 				<configuration>
 					<generatedProjectHome>./target/apps</generatedProjectHome>
-
-					<containerImage>
-						<orgName>testspringcloud</orgName>
-						<enableMetadata>true</enableMetadata>
-					</containerImage>
-
-					<generatedApp>
+					<application>
 						<name>http</name>
 						<type>source</type>
 						<version>${project.version}</version>
 						<configClass>io.pivotal.java.function.http.supplier.HttpSupplierConfiguration.class</configClass>
-					</generatedApp>
 
-					<dependencies>
-						<dependency>
-							<groupId>io.pivotal.java.function</groupId>
-							<artifactId>http-supplier</artifactId>
-							<version>${java-functions.version}</version>
-						</dependency>
-					</dependencies>
+						<properties>
+							<additionalAppProperty>spring.main.web-application-type=reactive</additionalAppProperty>
+							<additionalAppPropertiy>spring.cloud.streamapp.security.enabled=false</additionalAppPropertiy>
+							<additionalAppProperty>spring.cloud.streamapp.security.csrf-enabled=false</additionalAppProperty>
+						</properties>
 
-					<additionalAppProperties>
-						<additionalAppProperty>spring.main.web-application-type=reactive</additionalAppProperty>
-						<additionalAppPropertiy>spring.cloud.streamapp.security.enabled=false</additionalAppPropertiy>
-						<additionalAppProperty>spring.cloud.streamapp.security.csrf-enabled=false</additionalAppProperty>
-					</additionalAppProperties>
+						<containerImage>
+							<orgName>testspringcloud</orgName>
+							<enableMetadata>true</enableMetadata>
+						</containerImage>
 
-					<metadataSourceTypeFilters>
-						<filter>io.pivotal.java.function.http.supplier.HttpSourceProperties</filter>
-						<filter>io.pivotal.java.function.http.supplier.HttpSourceProperties$Cors</filter>
-					</metadataSourceTypeFilters>
+						<maven>
+							<dependencies>
+								<dependency>
+									<groupId>io.pivotal.java.function</groupId>
+									<artifactId>http-supplier</artifactId>
+									<version>${java-functions.version}</version>
+								</dependency>
+							</dependencies>
+						</maven>
 
-					<metadataNameFilters>
-						<filter>server.port</filter>
-					</metadataNameFilters>
-
+						<metadata>
+							<sourceTypeFilters>
+								<filter>io.pivotal.java.function.http.supplier.HttpSourceProperties</filter>
+								<filter>io.pivotal.java.function.http.supplier.HttpSourceProperties$Cors</filter>
+							</sourceTypeFilters>
+							<nameFilters>
+								<filter>server.port</filter>
+							</nameFilters>
+						</metadata>
+					</application>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -242,5 +250,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
