--- a/applications/processor/aggregator-processor/pom.xml
+++ b/applications/processor/aggregator-processor/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>aggregator-processor</artifactId>
     <name>aggregator-processor</name>
     <description>aggregator processor apps</description>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M3</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
