--- a/applications/sink/twitter-update-sink/pom.xml
+++ b/applications/sink/twitter-update-sink/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>twitter-update-sink</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M3</version>
     <name>twitter-update-sink</name>
     <description>twitter update sink apps</description>
     <packaging>jar</packaging>
