--- a/applications/sink/websocket-sink/pom.xml
+++ b/applications/sink/websocket-sink/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>websocket-sink</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M3</version>
     <name>websocket-sink</name>
     <description>websocket sink apps</description>
     <packaging>jar</packaging>
