--- a/applications/source/time-source/pom.xml
+++ b/applications/source/time-source/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>time-source</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-M3</version>
     <name>time-source</name>
     <description>time source apps</description>
     <packaging>jar</packaging>
